--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "fightlines-server"
+name = "server-actix"
 version = "0.1.0"
-authors = ["Chad Stearns <chadtech0@gmail.com>"]
+authors = ["loopy"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.4"
+actix-web = "2.0"
+actix-rt = "1.0"
 fightlines_moves = { path = "../moves" }
