--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "server"
 version = "0.1.0"
-authors = ["Chadtech <chadtech0@gmail.com>"]
+authors = ["Chadtech <chadtech0@gmail.com>", "VictorXLR <Jelly@VictorXLR.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
