Ui remade with Seed, and with click event

--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,11 +1,25 @@
 [package]
-name = "ui"
 version = "0.1.0"
+name = "ui"
 authors = ["Chadtech <chadtech0@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
+[dev-dependencies]
+wasm-bindgen-test = "0.3.12"
 
 [dependencies]
-yew = { version = "0.15", package = "yew-stdweb" }
+# Referenced commit fixes base url and memory bugs in Seed 0.7.0
+# (https://github.com/seed-rs/seed/pull/454 + https://github.com/seed-rs/seed/pull/455).
+# Replace with "0.8.0" once the new Seed version is released.
+seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }
+
+[profile.release]
+lto = true
+opt-level = 'z'
+codegen-units = 1
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ['-Os']
