--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,3 +14,7 @@ fightlines_moves = { path = "../moves" }
 rand = "0.3"
 actix-files = "0.2.1"
 serde="1.0"
+protobuf  = "2"
+
+[build-dependencies]
+protobuf-codegen-pure = "2.3"
