--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -15,11 +15,14 @@ wasm-bindgen-test = "0.3.12"
 # (https://github.com/seed-rs/seed/pull/454 + https://github.com/seed-rs/seed/pull/455).
 # Replace with "0.8.0" once the new Seed version is released.
 seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }
+serde="1.0"
+
 
 [profile.release]
 lto = true
 opt-level = 'z'
 codegen-units = 1
+
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ['-Os']
