--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,3 +17,7 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: format
+      run:  cargo fmt --check
+    - name: clippy
+      run: cargo clippy
