--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,10 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: Rust Action
-      uses: icepuma/rust-action@1.43.1
-    - name: clippy
-      run: cargo clippy
+    - name: rust-rustfmt-check
+      uses: mbrobbel/rustfmt-check@0.2.0
+      with:
+        # GitHub token
+        # token: 
+        # Arguments for cargo. Not for rustfmt options.
+        # args: # optional
