--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,28 +7,20 @@ on:
     branches: [ master ]
 
 jobs:
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-            toolchain: stable
-            components: rustfmt
-            override: true
-      - uses: mbrobbel/rustfmt-check@master
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          
   build:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+
+
+    - name: rust-clippy-check
+      uses: actions-rs/clippy-check@v1.0.5
+      with:
+        # GitHub token
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
-
-
+      run: cargo test --verbose  
