--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,14 @@ jobs:
         # GitHub token
         token: ${{ secrets.GITHUB_TOKEN }}
         args: -- -D warnings  
+        
+
+    - name: cargo fmt --check
+      uses: actions-rs/clippy-check@v1.0.5
+      with:
+          command: fmt
+          args: --all -- --check
+            
     - name: Build
       run: cargo build --verbose
     - name: Run tests
