Moved game_request to shared

--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -21,6 +21,8 @@ code-gen = { path = "../code-gen" }
 bincode = "1.2.1"
 futures = "^0.3.4"
 hex = "0.4.2"
+shared = { path = "../shared" }
+
 
 [profile.release]
 lto = true
