--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,4 @@ serde = "1.0"
 shared = { path = "../shared" }
 actix-cors = "0.2.0"
 hex = "0.4.2"
+uuid = { version = "0.8", features = ["serde", "v4"] }
